--- a/Portafolio.html
+++ b/Portafolio.html
@@ -51,16 +51,146 @@
         <h2 class="heading">About <span>Me</span></h2>
 
         <div class="about-img">
-            <img src="" alt="">
+            <img src="./img/805233.jpg" alt="">
             <span class="circle-spin"></span>
         </div>
 
         <div class="about-content">
             <h3>Frontend Developer!</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam animi, voluptatibus rem nemo totam recusandae ea, provident sed repellat ullam repudiandae eius suscipit corrupti voluptate. Nobis ea voluptas in incidunt.</p>
+
+            <div class="btn-box btns">
+                <a href="#" class="btn">Read More</a>
+            </div>
         </div>
+    </section>
 
+    <section class="education" id="education">
+        <h2 class="heading">My <span>Jorney</span></h2>
 
+        <div class="education-row">    
+            <div class="education-column">
+                <h3 class="title">Proyectos</h3>
+
+                <div class="education-box">
+                    <di class="education-content">
+                        <div class="content">
+                            <div class="year"><li class='bx bxs-calendar'></li> 2023 - 2024 </div>
+                            <h3>Master Degree - SENA</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nobis voluptatem vel hic consequuntur non tempore quaerat, obcaecati facere error mollitia minima eius ab repellendus doloremque. Laudantium nihil doloribus quasi.</p>
+                        </div>
+                    </div>
+
+                    <di class="education-content">
+                        <div class="content">
+                            <div class="year"><li class='bx bxs-calendar'></li> 2023 - 2024 </div>
+                            <h3>Master Degree - SENA</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nobis voluptatem vel hic consequuntur non tempore quaerat, obcaecati facere error mollitia minima eius ab repellendus doloremque. Laudantium nihil doloribus quasi.</p>
+                        </div>
+                    </div>
+
+                    <di class="education-content">
+                        <div class="content">
+                            <div class="year"><li class='bx bxs-calendar'></li> 2023 - 2024 </div>
+                            <h3>Master Degree - SENA</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nobis voluptatem vel hic consequuntur non tempore quaerat, obcaecati facere error mollitia minima eius ab repellendus doloremque. Laudantium nihil doloribus quasi.</p>
+                        </div>
+                    </div> 
+                </div>
+            </div>
+
+            <div class="education-column">
+                <h3 class="title">Experiencia</h3>
+
+                <div class="education-box">
+                    <di class="education-content">
+                        <div class="content">
+                            <div class="year"><li class='bx bxs-calendar'></li> 2023 - 2024 </div>
+                            <h3>Master Degree - SENA</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nobis voluptatem vel hic consequuntur non tempore quaerat, obcaecati facere error mollitia minima eius ab repellendus doloremque. Laudantium nihil doloribus quasi.</p>
+                        </div>
+                    </div>
+
+                    <di class="education-content">
+                        <div class="content">
+                            <div class="year"><li class='bx bxs-calendar'></li> 2023 - 2024 </div>
+                            <h3>Master Degree - SENA</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nobis voluptatem vel hic consequuntur non tempore quaerat, obcaecati facere error mollitia minima eius ab repellendus doloremque. Laudantium nihil doloribus quasi.</p>
+                        </div>
+                    </div>
+
+                    <di class="education-content">
+                        <div class="content">
+                            <div class="year"><li class='bx bxs-calendar'></li> 2023 - 2024 </div>
+                            <h3>Master Degree - SENA</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt nobis voluptatem vel hic consequuntur non tempore quaerat, obcaecati facere error mollitia minima eius ab repellendus doloremque. Laudantium nihil doloribus quasi.</p>
+                        </div>
+                    </div> 
+                </div>
+            </div>
+        </div>  
+    </section>
+
+    <section class="skills" id="skills">
+        <h2 class="heading">My <span>Skills</span></h2>
+
+        <div class="skills-row">
+            <div class="skills-column">
+                <h3 class="title">Coding Skills</h3>
+
+                <div class="skills-box">
+                    <div class="skills-content">
+                        <div class="progress">
+                            <h3>HTML <span>60%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="progress">
+                            <h3>CSS <span>70%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="progress">
+                            <h3>JavaScript <span>30%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="progress">
+                            <h3>Python <span>20%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="skills-column">
+                <h3 class="title">Professional Skills</h3>
+
+                <div class="skills-box">
+                    <div class="skills-content">
+                        <div class="progress">
+                            <h3>Web Design <span>80%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="progress">
+                            <h3>Web Development <span>67%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="progress">
+                            <h3>Graphic Design <span>90%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="progress">
+                            <h3>SEO Marketing <span>30%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
