--- a/Portafolio.html
+++ b/Portafolio.html
@@ -18,8 +18,8 @@
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
-            <a href="#proyectos">Pryectos</a>
-            <a href="#skilks">Skills</a>
+            <a href="#Projects">Projects</a>
+            <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -65,12 +65,12 @@
         </div>
     </section>
 
-    <section class="education" id="education">
+    <section class="education" id="Projects">
         <h2 class="heading">My <span>Jorney</span></h2>
 
         <div class="education-row">    
             <div class="education-column">
-                <h3 class="title">Proyectos</h3>
+                <h3 class="title">Projects</h3>
 
                 <div class="education-box">
                     <di class="education-content">
@@ -196,7 +196,7 @@
 
 
 
-    <script src=""></script>
+    <script src="./js/portafolio.js"></script>
 
 
 
