--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
             <a href="#Projects">Projects</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
+
+            <span class="active-nav"></span>
         </nav>
     </header>
 
-    <section class="home" id="home">
+    <section class="home show-animate" id="home">
         <div class="home-content">
             <h1>Hi, I'm <span>Andres España</span></h1>
             <div class="text-animate">
                 <h3>Frontend Developer</h3>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias incidunt quos cum dolores illum optio tenetur vero ea! Ut nihil provident aperiam veniam, fugit ex nulla odit illum amet cupiditate?</p>
-
             <div class="btn-box">
                 <a href="#" class="btn">Hire Me</a>
                 <a href="#" class="btn">Let's Talk</a>
@@ -192,6 +193,15 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy;2023 by FIX l All Rights Reserver.</p>
+        </div>
+        <div class="footer-iconTop">
+            <a href="#"><i class="bx bx-up-arrow-alt"></i></a>
+        </div>
+    </footer>
 
 
 
