--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="home-sci">
             <a href="#"><li class='bx bxl-facebook'></li></a>
             <a href="#"><li class='bx bxl-twitter'></li></a>
-            <a href="#"><li class="bx bxl-github"></li></a>
+            <a href="https://github.com/LeomarEs19"><li class="bx bxl-github"></li></a>
         </div>
 
         <div class="home-imgHover"></div>
@@ -52,7 +52,7 @@
         <h2 class="heading">About <span>Me</span></h2>
 
         <div class="about-img">
-            <img src="./img/805233.jpg" alt="">
+            <img src="./img/Sin título1.png" alt="">
             <span class="circle-spin"></span>
         </div>
 
@@ -67,7 +67,7 @@
     </section>
 
     <section class="education" id="Projects">
-        <h2 class="heading">My <span>Jorney</span></h2>
+        <h2 class="heading">My <span>Projects</span></h2>
 
         <div class="education-row">    
             <div class="education-column">
